# Chakra

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.MD  GLOSSARY.md  LICENSE  LOCAL_SETUP.md  Makefile  README.md  SECURITY.md  TECHNICAL_SPEC.md
chakra-mainframe/: Anchor.toml
chakra-mainframe/programs/chakra-mainframe/: Cargo.toml
chakra-mainframe/programs/chakra-mainframe/src/: errors.rs  events.rs  lib.rs
chakra-mainframe/programs/chakra-mainframe/src/instructions/: cancel_intent.rs  initialize_intent.rs  mod.rs
chakra-mainframe/programs/chakra-mainframe/src/state/: escrow.rs
chakra-mainframe/tests/: chakra-mainframe.ts
chakra-onchain/: .env.example  .gitignore  Anchor.toml  README.md  package.json
chakra-onchain/programs/chakra-mainframe/: Cargo.toml
chakra-onchain/programs/chakra-mainframe/src/: errors.rs  events.rs  lib.rs  state.rs
chakra-onchain/programs/chakra-mainframe/src/instructions/: admin.rs  cancel_intent.rs  initialize_intent.rs  mod.rs  submit_proof.rs
chakra-onchain/src/: ChakraReceiver.sol
chakra-onchain/test/: ChakraReceiver.t.sol
chakra-onchain/tests/: anchor_tests_spec.md  authorize.ts  chakra-mainframe.ts
chakra-sentinel/: .env.example  .gitignore  Cargo.toml  shard.json
chakra-sentinel/contracts/: ChakraReceiver.sol
chakra-sentinel/scripts/: generate_shards.py  generate_shards.sh  run_network.sh
chakra-sentinel/src/: errors.rs  lib.rs  listener.rs  main.rs  node_server.rs  processor.rs  signer.rs  state.rs
chakra-sentinel/tests/: signer_tests.rs
chakra-web/: index.html  package-lock.json  package.json
chakra-web/src/: App.tsx  ThreeScene.tsx  index.css  types.ts
chakra-web/src/utils/: crypto.ts
