[package]
name = "chakra-sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
# async runtime
tokio = { version = "1.35", features = ["full"] }

# solana interaction
solana-client = "1.18"
solana-sdk = "1.18"
anchor-client = "0.30"
anchor-lang = "0.30"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

# utilities
anyhow = "1.0"
futures-util = "0.3"
log = "0.4"
env_logger = "0.10"
