[package]
name = "chakra-sentinel"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-rpc-client-api = "1.18.26"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
futures-util = "0.3"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.8"
hex = "0.4"
bs58 = "0.4"
generic-array = "0.14"
sha3 = "0.10"
sha2 = "0.10"
libsecp256k1 = "0.6.0"
